# 7309CSEC_Tool

./: CMakeLists.txt  README.md
cmake/: CyberLogSummarizerConfig.cmake.in
include/: logParser.h  ollamaClient.h  reportGenerator.h  securityAnalyzer.h  summarizer.h  utils.h
src/: logParser.cpp  main.cpp  ollamaClient.cpp  reportGenerator.cpp  securityAnalyzer.cpp  summarizer.cpp  utils.cpp
